tdf#105536: PDF image should be v-flipped unconditionally

Unit test included

Change-Id: Id0d054a6b9922666daf4f36908f97ed6e65fb6c7